force-app/main/default/objects/Sales_Coach_Activity__c/Sales_Coach_Activity__c.object-meta.xml
<CustomObject>
    <label>Sales Coach Activity</label>
    <nameField>
        <displayFormat>SCAN-{000000}</displayFormat>
        <label>Sales Coach Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Coach Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>