force-app/main/default/objects/Sales_Coach_Activity__c/fields/Activity_Details__c.field-meta.xml
<CustomField>
    <fullName>Activity_Details__c</fullName>
    <label>Activity Details</label>
    <type>TextArea</type>
</CustomField>