force-app/main/default/objects/Sales_Coach_Activity__c/fields/Ordering_Number__c.field-meta.xml
<CustomField>
    <fullName>Ordering_Number__c</fullName>
    <label>Ordering Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>