force-app/main/default/objects/Sales_Coach_Activity__c/fields/Sales_Coach_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sales_Coach_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Coach Stage</label>
    <referenceTo>Sales_Coach_Stage__c</referenceTo>
    <relationshipLabel>Sales Coach Activities</relationshipLabel>
    <relationshipName>Sales_Coach_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>